@@ -541,6 +541,24 @@ name|master
 operator|.
 name|handler
 operator|.
+name|DisableTableHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|master
+operator|.
+name|handler
+operator|.
 name|OpenedRegionHandler
 import|;
 end_import
@@ -6446,7 +6464,72 @@ expr_stmt|;
 comment|// Presume that master has stale data.  Presume remote side just split.
 comment|// Presume that the split message when it comes in will fix up the master's
 comment|// in memory cluster state.
-return|return;
+if|if
+condition|(
+name|checkIfRegionBelongsToDisabling
+argument_list|(
+name|region
+argument_list|)
+condition|)
+block|{
+comment|// Remove from the regionsinTransition map
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"While trying to recover the table:"
+operator|+
+name|region
+operator|.
+name|getTableNameAsString
+argument_list|()
+operator|+
+literal|" from DISABLING state to DISABLED state, the region:"
+operator|+
+name|region
+operator|+
+literal|" was already offlined."
+argument_list|)
+expr_stmt|;
+synchronized|synchronized
+init|(
+name|this
+operator|.
+name|regionsInTransition
+init|)
+block|{
+name|this
+operator|.
+name|regionsInTransition
+operator|.
+name|remove
+argument_list|(
+name|region
+operator|.
+name|getEncodedName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// Remove from the regionsMap
+synchronized|synchronized
+init|(
+name|this
+operator|.
+name|regions
+init|)
+block|{
+name|this
+operator|.
+name|regions
+operator|.
+name|remove
+argument_list|(
+name|region
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 catch|catch
 parameter_list|(
@@ -7602,6 +7685,8 @@ name|rebuildUserRegions
 parameter_list|()
 throws|throws
 name|IOException
+throws|,
+name|KeeperException
 block|{
 comment|// Region assignment from META
 name|List
@@ -7653,6 +7738,22 @@ argument_list|>
 argument_list|>
 argument_list|()
 decl_stmt|;
+comment|//store all the table names in disabling state
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|disablingTables
+init|=
+operator|new
+name|HashSet
+argument_list|<
+name|String
+argument_list|>
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
 comment|// Iterate regions in META
 for|for
 control|(
@@ -7692,6 +7793,14 @@ operator|.
 name|getFirst
 argument_list|()
 decl_stmt|;
+name|String
+name|disablingTableName
+init|=
+name|regionInfo
+operator|.
+name|getTableNameAsString
+argument_list|()
+decl_stmt|;
 name|ServerName
 name|regionLocation
 init|=
@@ -7709,6 +7818,17 @@ condition|)
 block|{
 comment|// Region not being served, add to region map with no assignment
 comment|// If this needs to be assigned out, it will also be in ZK as RIT
+comment|// add if the table is not in disabled state
+if|if
+condition|(
+literal|false
+operator|==
+name|checkIfRegionBelongsToDisabled
+argument_list|(
+name|regionInfo
+argument_list|)
+condition|)
+block|{
 name|this
 operator|.
 name|regions
@@ -7720,6 +7840,23 @@ argument_list|,
 literal|null
 argument_list|)
 expr_stmt|;
+block|}
+if|if
+condition|(
+name|checkIfRegionBelongsToDisabling
+argument_list|(
+name|regionInfo
+argument_list|)
+condition|)
+block|{
+name|disablingTables
+operator|.
+name|add
+argument_list|(
+name|disablingTableName
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 elseif|else
 if|if
@@ -7809,8 +7946,17 @@ block|}
 else|else
 block|{
 comment|// Region is being served and on an active server
-name|this
-operator|.
+comment|// add only if region not in disabled table
+if|if
+condition|(
+literal|false
+operator|==
+name|checkIfRegionBelongsToDisabled
+argument_list|(
+name|regionInfo
+argument_list|)
+condition|)
+block|{
 name|regions
 operator|.
 name|put
@@ -7828,9 +7974,146 @@ name|regionInfo
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|checkIfRegionBelongsToDisabling
+argument_list|(
+name|regionInfo
+argument_list|)
+condition|)
+block|{
+name|disablingTables
+operator|.
+name|add
+argument_list|(
+name|disablingTableName
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+comment|// Recover the tables that were not fully moved to DISABLED state.
+comment|// These tables are in DISABLING state when the master restarted/switched.
+if|if
+condition|(
+name|disablingTables
+operator|.
+name|size
+argument_list|()
+operator|!=
+literal|0
+condition|)
+block|{
+comment|// Create a watcher on the zookeeper node
+name|ZKUtil
+operator|.
+name|listChildrenAndWatchForNewChildren
+argument_list|(
+name|watcher
+argument_list|,
+name|watcher
+operator|.
+name|assignmentZNode
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|String
+name|tableName
+range|:
+name|disablingTables
+control|)
+block|{
+comment|// Recover by calling DisableTableHandler
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"The table "
+operator|+
+name|tableName
+operator|+
+literal|" is in DISABLING state.  Hence recovering by moving the table"
+operator|+
+literal|" to DISABLED state."
+argument_list|)
+expr_stmt|;
+operator|new
+name|DisableTableHandler
+argument_list|(
+name|this
+operator|.
+name|master
+argument_list|,
+name|tableName
+operator|.
+name|getBytes
+argument_list|()
+argument_list|,
+name|catalogTracker
+argument_list|,
+name|this
+argument_list|)
+operator|.
+name|process
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 return|return
 name|offlineServers
+return|;
+block|}
+specifier|private
+name|boolean
+name|checkIfRegionBelongsToDisabled
+parameter_list|(
+name|HRegionInfo
+name|regionInfo
+parameter_list|)
+block|{
+name|String
+name|tableName
+init|=
+name|regionInfo
+operator|.
+name|getTableNameAsString
+argument_list|()
+decl_stmt|;
+return|return
+name|getZKTable
+argument_list|()
+operator|.
+name|isDisabledTable
+argument_list|(
+name|tableName
+argument_list|)
+return|;
+block|}
+specifier|private
+name|boolean
+name|checkIfRegionBelongsToDisabling
+parameter_list|(
+name|HRegionInfo
+name|regionInfo
+parameter_list|)
+block|{
+name|String
+name|tableName
+init|=
+name|regionInfo
+operator|.
+name|getTableNameAsString
+argument_list|()
+decl_stmt|;
+return|return
+name|getZKTable
+argument_list|()
+operator|.
+name|isDisablingTable
+argument_list|(
+name|tableName
+argument_list|)
 return|;
 block|}
 comment|/**    * Processes list of dead servers from result of META scan.    *<p>    * This is used as part of failover to handle RegionServers which failed    * while there was no active master.    *<p>    * Method stubs in-memory data to be as expected by the normal server shutdown    * handler.    *    * @param deadServers    * @throws IOException    * @throws KeeperException    */
