@@ -161,6 +161,8 @@ Release 0.91.0 - Unreleased
    HBASE-3893  HRegion.internalObtainRowLock shouldn't wait forever
    HBASE-4075  A bug in TestZKBasedOpenCloseRegion (Jieshan Bean via Ted Yu)
    HBASE-4087  HBaseAdmin should perform validation of connection it holds
+   HBASE-4052  Enabling a table after master switch does not allow table scan,
+               throwing NotServingRegionException (ramkrishna via Ted Yu)
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
